--- a/server/microservices/package.json
+++ b/server/microservices/package.json
@@ -4,7 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:account": "cd account && nodemon index.js",
+    "dev:cart": "cd cart && nodemon index.js",
+    "dev:inventory": "cd inventory && nodemon index.js",
+    "dev:order-status": "cd order-status && nodemon index.js",
+    "dev:payment": "cd payment && nodemon index.js",
+    "dev:place-order": "cd place-order && nodemon index.js",
+    "dev:product-review": "cd product-review && nodemon index.js",
+    "dev:recommendation": "cd recommendation && nodemon index.js",
+    "dev:recommendation-generation": "cd recommendation-generation && nodemon index.js",
+    "dev:search": "cd search && nodemon index.js",
+    "dev:shipping": "cd shipping && nodemon index.js",
+    "dev": "concurrently \"npm run dev:account\" \"npm run dev:cart\" \"npm run dev:inventory\" \"npm run dev:order-status\" \"npm run dev:payment\" \"npm run dev:place-order\" \"npm run dev:product-review\" \"npm run dev:recommendation\" \"npm run dev:recommendation-generation\" \"npm run dev:search\" \"npm run dev:shipping\"",
+    "start:account": "cd account && node index.js",
+    "start:cart": "cd cart && node index.js",
+    "start:inventory": "cd inventory && node index.js",
+    "start:order-status": "cd order-status && node index.js",
+    "start:payment": "cd payment && node index.js",
+    "start:place-order": "cd place-order && node index.js",
+    "start:product-review": "cd product-review && node index.js",
+    "start:recommendation": "cd recommendation && node index.js",
+    "start:recommendation-generation": "cd recommendation-generation && node index.js",
+    "start:search": "cd search && node index.js",
+    "start:shipping": "cd shipping && node index.js",
+    "start": "concurrently \"npm run start:account\" \"npm run start:cart\" \"npm run start:inventory\" \"npm run start:order-status\" \"npm run start:payment\" \"npm run start:place-order\" \"npm run start:product-review\" \"npm run start:recommendation\" \"npm run start:recommendation-generation\" \"npm run start:search\" \"npm run start:shipping\""
   },
   "keywords": [],
   "author": "",
