--- a/server/api-gateway/package.json
+++ b/server/api-gateway/package.json
@@ -17,7 +17,11 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.12.1",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3"
   }
 }
