--- a/server/microservices/package.json
+++ b/server/microservices/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev:account": "cd account && nodemon index.js",
+    "dev:account": "cd account && nodemon --exec \"node --experimental-modules --env-file=.env index.js\"",
     "dev:cart": "cd cart && nodemon index.js",
     "dev:inventory": "cd inventory && nodemon index.js",
     "dev:order-status": "cd order-status && nodemon index.js",
@@ -36,8 +37,12 @@
     "nodemon": "^3.0.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.12.1",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3"
   }
 }
