--- a/server/api-gateway/package.json
+++ b/server/api-gateway/package.json
@@ -5,15 +5,47 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "cross-env NODE_ENV=production node -r dotenv/config server.js",
     "dev": "nodemon --exec \"node --env-file=.env server.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test mocha -r dotenv/config.js --timeout 60000 --exit --recursive \"./test/**/*.test.js\"",
+    "coverage": "cross-env NODE_ENV=test c8 --reporter=text mocha -r dotenv/config --timeout 60000 --recursive --exit \"./test/**/*.test.js\"",
+    "format": "prettier --write ."
+  },
+  "c8": {
+    "all": true,
+    "branches": 100,
+    "exclude": [
+      "test/**",
+      "node_modules/**",
+      "**/.eslintrc.cjs"
+    ],
+    "instrument": {
+      "include": [
+        "src/**/*.js"
+      ]
+    }
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "axios-mock-adapter": "^1.22.0",
+    "c8": "^9.1.0",
+    "chai": "^5.0.3",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.3",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "mocha": "^10.3.0",
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.5",
+    "sinon": "^17.0.1",
+    "supertest": "^6.3.4"
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -22,6 +54,7 @@
     "express": "^4.18.2",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "winston": "^3.11.0"
   }
 }
