--- a/server/microservices/account/package.json
+++ b/server/microservices/account/package.json
@@ -5,10 +5,24 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "cross-env NODE_ENV=production node -r dotenv/config index.js",
+    "dev": "nodemon --exec \"node --env-file=.env index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "joi": "^17.12.1",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.4",
+    "nodemon": "^3.0.3"
+  }
 }
