--- a/server/microservices/search/package.json
+++ b/server/microservices/search/package.json
@@ -5,14 +5,30 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production node -r dotenv/config index.js",
+    "dev": "nodemon --exec \"node --env-file=.env index.js\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.523.0",
+    "@elastic/elasticsearch": "^8.12.2",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
+    "eslint-plugin-prettier": "^5.1.3",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "nodemon": "^3.1.0",
+    "prettier": "3.2.5"
   }
 }
